--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=app
+spring.thymeleaf.check-template-location=false
+
+spring.datasource.url=jdbc:mysql://localhost:3306/task_app
+spring.datasource.username=${MYSQLNAME}
+spring.datasource.password=${MYSQLPASS}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
